name:                Hawt
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Hawt#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     UI.Hawt.Application
                        ,  UI.Hawt.Component
                        , UI.Hawt.Component.Panel
                        , UI.Hawt.Component.Label
                        , UI.Hawt.Component.Button
                        , UI.Hawt.Component.BorderLayout
                        , UI.Hawt.Render
                        , UI.Hawt.Event
                        , UI.Hawt.Type
  build-depends:       base >= 4.7 && < 5
                        , sdl2
                        , sdl2-ttf
                        , text
                        , linear
                        , transformers
                        , filepath
                        , uuid
                        , containers
  cpp-options: -D_SDL_main_h
  default-language:    Haskell2010

executable Hawt-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Hawt
                     , sdl2
                     , linear
  default-language:    Haskell2010

test-suite Hawt-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Hawt
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Hawt
